# hugging-llama

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  api_documentation.md  leftover.md  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml  coverage-badge.yml  docker-build.yml  python-lint.yml  python-tests.yml  python-tests314.yml  python-typecheck.yml
documentation/: TODO.md  api_documentation.md  faq.md  specs.md
hugging_llama/: __init__.py
ollama_local/: __init__.py
open-webui-main/backend/open_webui/routers/: ollama.py
open-webui-main/backend/open_webui/test/apps/webui/routers/: test_ollama.py
scripts/: curl-chat.sh  curl-embed.sh  curl-generate.sh
src/hugging_llama/: __init__.py  _compat.py  _openmp.py  api_types.py  cli.py  logits.py  metadata_utils.py  model_catalog.py  model_manager.py  modelfile.py  server.py  stop_sequences.py  utils.py
src/ollama_local/: api_types.py  cli.py  logits.py  model_manager.py  server.py  utils.py
tests/: conftest.py  test_api.py  test_cli.py  test_compat.py  test_end_to_end.py  test_logits.py  test_metadata_utils.py  test_model_manager.py  test_modelfile.py  test_openai_api.py  test_openwebui_compat.py  test_reasoning_utils.py  test_utils.py
tests/golden/: generate_non_stream.json  generate_stream.json
